AC_PREREQ(2.50)
AC_INIT(README)
AM_CONFIG_HEADER(include/config.h)

# Determine package name and version from tla SCM data
tla_rev="$(tla revisions --full | tail -n1)"
tla_cat="$(tla parse-package-name --category "$tla_rev")"
tla_bra="$(tla parse-package-name --branch "$tla_rev")"
tla_vsn="$(tla parse-package-name --vsn "$tla_rev")"
tla_lvl="$(tla parse-package-name --lvl "$tla_rev")"
if test "$tla_bra" != "main"; then
	tla_pkg="${tla_cat}-${tla-bra}"
else
	tla_pkg="${tla_cat}"i
fi

AM_INIT_AUTOMAKE("${tla_pkg}", "${tla_vsn}${tla_lvl}")
AM_MAINTAINER_MODE

AC_PROG_CC
AC_PROG_INSTALL

AC_OUTPUT([
Makefile
params/Makefile
misc-scripts/Makefile
cdburn/Makefile
])

cat<<EOF

Configuration:
  Package: $PACKAGE
  Version: $VERSION

  srcdir:  $srcdir
  CC:      $CC
  prefix:  $prefix
  bindir:  $bindir
EOF
