EXTRA_DIST = percheck bing xnest umlxterm ps2lj4 np colfilter percheck.1.in
bin_SCRIPTS = percheck bing xnest umlxterm ps2lj4 np colfilter
man_MANS = percheck.1

EXTRA_DIST  += list-debuginfo-rpms
bin_SCRIPTS += list-debuginfo-rpms

EXTRA_DIST  += pdf2minibook
bin_SCRIPTS += pdf2minibook

EXTRA_DIST += bash-functions.sh
