EXTRA_DIST = pilot pilot.usermap pilot-usb

hotplugusbdir = $(sysconfdir)/hotplug/usb

# We should choose our poison at configure time
configdir = $(sysconfdir)/sysconfig
# configdir = $(sysconfdir)/default

hotplugusb_SCRIPTS = pilot
hotplugusb_DATA = pilot.usermap

config_DATA = pilot-usb

# arch-tag: 2c9e5169-f10f-4814-bcf2-7a3535b449af
