EXTRA_DIST = pilot pilot.in pilot.usermap pilot-usb

# hotplugusbdir = $(sysconfdir)/hotplug/usb

# We should choose our poison at configure time
# configdir = $(sysconfdir)/sysconfig
# configdir = $(sysconfdir)/default

hotplugusb_SCRIPTS = pilot
hotplugusb_DATA = pilot.usermap

config_DATA = pilot-usb
